Permettre d'ajouter facilement des commandes par l'API